📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13254,5 +13254,101 @@
         "published": "Mon, 15 Dec 2025 09:00:00 +0000",
         "source": "AI News",
         "summary": "<p>Enterprise leaders are pressing ahead with artificial intelligence, even as early results remain uneven. Reporting from the Wall Street Journal and Reuters shows that most CEOs expect AI spending to keep rising through 2026, despite difficulty tying those investments to clear, enterprise-wide returns. This tension highlights where many organisations now sit in their AI journey. [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/ceos-still-betting-on-ai-strateg"
+    },
+    {
+        "id": "https://www.theverge.com/news/844502/starlink-and-chinese-satellites-nearly-collided-last-week",
+        "title": "Starlink and Chinese satellites nearly collided last week",
+        "link": "https://www.theverge.com/news/844502/starlink-and-chinese-satellites-nearly-collided-last-week",
+        "published": "2025-12-15T04:53:29-05:00",
+        "source": "The Verge",
+        "summary": "A collision in space was narrowly avoided last week when a newly deployed Chinese satellite came within a few hundred meters of one of the roughly 9,000 Starlink satellites currently operating in low Earth orbit. SpaceX is laying the blame on the satellite operator for not sharing location data. \"When satellite operators do not share [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/radiation-detection-systems-are-quietly-running-in-the-background-all-around-you/",
+        "title": "Radiation-Detection Systems Are Quietly Running in the Background All Around You",
+        "link": "https://www.wired.com/story/radiation-detection-systems-are-quietly-running-in-the-background-all-around-you/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "If a major disaster like Fukushima or Chernobyl ever happens again, the world would know almost straight away, thanks to an array of government and DIY radiation-monitoring programs running globally."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-secret-santa-gift-ideas-for-2025-affordable-gifts-you-can-still-get-from-lego-apple-yeti-and-more-130014284.html?src=rss",
+        "title": "The best Secret Santa gift ideas for 2025: Affordable gifts you can still get from Lego, Apple, Yeti and more",
+        "link": "https://www.engadget.com/the-best-secret-santa-gift-ideas-for-2025-affordable-gifts-you-can-still-get-from-lego-apple-yeti-and-more-130014284.html?src=rss",
+        "published": "Mon, 15 Dec 2025 09:17:20 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Secret Santa gift exchanges can be chaotic in the best way. One minute you\u2019re drawing a name from a hat, the next you\u2019re scrambling to figure out what they\u2019d actually like. The trick is finding something that\u2019s thoughtful, gets a laugh or feels useful without going over budget. Luckily there are plenty of gifts that do exactly that, whether you\u2019re shopping for the office exchange, a family swap or a friend group tradition. From clever gadgets to playful desk toys and little luxuries, these id"
+    },
+    {
+        "id": "https://www.zdnet.com/article/fire-tv-settings-to-change/",
+        "title": "Own a Fire TV? I changed 10 settings to make the system run like new again",
+        "link": "https://www.zdnet.com/article/fire-tv-settings-to-change/",
+        "published": "Mon, 15 Dec 2025 10:00:47 GMT",
+        "source": "Latest news",
+        "summary": "If your Fire TV or Fire TV Stick feels slow, don't replace it just yet. These quick tips can give it a serious speed boost."
+    },
+    {
+        "id": "https://www.zdnet.com/article/still-running-windows-10-heres-why-thats-a-bad-idea/",
+        "title": "Still running Windows 10? Here's why that's a bad idea",
+        "link": "https://www.zdnet.com/article/still-running-windows-10-heres-why-thats-a-bad-idea/",
+        "published": "Mon, 15 Dec 2025 09:35:38 GMT",
+        "source": "Latest news",
+        "summary": "A depressingly large number of PCs are still running Windows 10, months after support for that OS officially ended. If you haven't signed up for extended security updates, history says you're asking for big trouble."
+    },
+    {
+        "id": "https://news.bloomberglaw.com/bankruptcy-law/robot-vacuum-roomba-maker-files-for-bankruptcy-after-35-years",
+        "title": "Roomba maker goes bankrupt, Chinese owner emerges",
+        "link": "https://news.bloomberglaw.com/bankruptcy-law/robot-vacuum-roomba-maker-files-for-bankruptcy-after-35-years",
+        "published": "Mon, 15 Dec 2025 00:36:44 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46268854\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/walmart-ai-strategy-agentic-future/",
+        "title": "Walmart\u2019s AI strategy: Beyond the hype, what\u2019s actually working",
+        "link": "https://www.artificialintelligence-news.com/news/walmart-ai-strategy-agentic-future/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>Walmart&#8217;s December 9 transfer to Nasdaq wasn&#8217;t just a symbolic gesture. The US$905 billion retailer is making its boldest claim yet: that it&#8217;s no longer a traditional discount chain, but a tech-powered enterprise using AI to fundamentally rewire retail operations.&#160; But beyond the marketing spin and the parade of AI announcements, what&#8217;s genuinely transforming at [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/walmart-ai-strategy"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/15/1128352/rise-of-ai-coding-developers-2026/",
+        "title": "AI coding is now everywhere. But not everyone is convinced.",
+        "link": "https://www.technologyreview.com/2025/12/15/1128352/rise-of-ai-coding-developers-2026/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Depending who you ask, AI-powered coding is either giving software developers an unprecedented productivity boost or churning out masses of poorly designed code that saps their attention and sets software projects up for serious long term-maintenance problems. The problem is right now, it\u2019s not easy to know which is true. As tech giants pour billions&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/15/1129169/a-brief-history-of-sam-altmans-hype/",
+        "title": "A brief history of Sam Altman\u2019s hype",
+        "link": "https://www.technologyreview.com/2025/12/15/1129169/a-brief-history-of-sam-altmans-hype/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Each time you\u2019ve heard a borderline outlandish idea of what AI will be capable of, it often turns out that Sam Altman was, if not the first to articulate it, at least the most persuasive and influential voice behind it.&#160; For more than a decade he has been known in Silicon Valley as a world-class&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/15/1129171/the-ai-doomers-feel-undeterred/",
+        "title": "The AI doomers feel undeterred",
+        "link": "https://www.technologyreview.com/2025/12/15/1129171/the-ai-doomers-feel-undeterred/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "It\u2019s a weird time to be an AI doomer. This small but influential community of researchers, scientists, and policy experts believes, in the simplest terms, that AI could get so good it could be bad\u2014very, very bad\u2014for humanity. Though many of these people would be more likely to describe themselves as advocates for AI safety&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/15/1129174/the-great-ai-hype-correction-of-2025/",
+        "title": "The great AI hype correction of 2025",
+        "link": "https://www.technologyreview.com/2025/12/15/1129174/the-great-ai-hype-correction-of-2025/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Some disillusionment was inevitable. When OpenAI released a free web app called ChatGPT in late 2022, it changed the course of an entire industry\u2014and several world economies. Millions of people started talking to their computers, and their computers started talking back. We were enchanted, and we expected more. We got it. Technology companies scrambled to&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/15/1129179/generative-ai-hype-distracts-us-from-ais-more-important-breakthroughs/",
+        "title": "Generative AI hype distracts us from AI\u2019s more important breakthroughs",
+        "link": "https://www.technologyreview.com/2025/12/15/1129179/generative-ai-hype-distracts-us-from-ais-more-important-breakthroughs/",
+        "published": "Mon, 15 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "On April 28, 2022, at a highly anticipated concert in Spokane, Washington, the musician Paul McCartney astonished his audience with a groundbreaking application of AI: He began to perform with a lifelike depiction of his long-deceased musical partner, John Lennon.&#160; Using recent advances in audio and video processing, engineers had taken the pair\u2019s final performance&#8230;"
     }
 ]
