📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13350,5 +13350,109 @@
         "published": "Mon, 15 Dec 2025 10:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "On April 28, 2022, at a highly anticipated concert in Spokane, Washington, the musician Paul McCartney astonished his audience with a groundbreaking application of AI: He began to perform with a lifelike depiction of his long-deceased musical partner, John Lennon.&#160; Using recent advances in audio and video processing, engineers had taken the pair\u2019s final performance&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/interstellar-arc-las-vegas/",
+        "title": "Interstellar Arc Serves Up Alien Foxes, Exoplanets, and VR Carl Sagan",
+        "link": "https://www.wired.com/story/interstellar-arc-las-vegas/",
+        "published": "Mon, 15 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Interstellar Arc is an immersive sci-fi experience that uses recent advances in headset tech to break new ground in virtual reality. And it all happens inside an empty-looking room in Las Vegas."
+    },
+    {
+        "id": "https://gizmodo.com/guillermo-del-toro-reveals-ideas-for-his-justice-league-dark-film-2000699583",
+        "title": "Guillermo del Toro Reveals Ideas for His \u2018Justice League Dark\u2019 Film",
+        "link": "https://gizmodo.com/guillermo-del-toro-reveals-ideas-for-his-justice-league-dark-film-2000699583",
+        "published": "Mon, 15 Dec 2025 11:00:23 +0000",
+        "source": "Gizmodo",
+        "summary": "The horror filmmaker sure knew what he wanted to do with 'Justice League Dark,' and still loves what he wrote for the would-be movie."
+    },
+    {
+        "id": "https://gizmodo.com/asml-high-na-transition-2000699553",
+        "title": "How the Biggest Monopoly in AI Is Keeping Its Throne in 2026 and Beyond",
+        "link": "https://gizmodo.com/asml-high-na-transition-2000699553",
+        "published": "Mon, 15 Dec 2025 10:30:03 +0000",
+        "source": "Gizmodo",
+        "summary": "It's unnerving how much of the global economy is dependent on $400 million lithography machines."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-mega-evolution-enhanced-booster-box-deal",
+        "title": "The Pok\u00e9mon TCG Mega Evolution Enhanced Booster Box is $29.99 cheaper on TCGplayer vs. Amazon",
+        "link": "https://mashable.com/article/dec-15-mega-evolution-enhanced-booster-box-deal",
+        "published": "Mon, 15 Dec 2025 10:53:53 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 15, Pok\u00e9mon TCG Mega Evolution Enhanced Booster Box is now $29.99 cheaper than the standard booster box on TCGplayer vs. Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/rob-reiner-dies-hollywood-tributes",
+        "title": "Hollywood pays tribute to Rob Reiner after legendary director is found dead",
+        "link": "https://mashable.com/article/rob-reiner-dies-hollywood-tributes",
+        "published": "Mon, 15 Dec 2025 10:49:43 +0000",
+        "source": "Mashable",
+        "summary": "Hollywood is paying tribute to director Rob Reiner after he and his wife Michele were found dead at their home in LA on Sunday."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-mega-charizard-x-ex-ultra-premium-collection-deal",
+        "title": "The Pok\u00e9mon TCG Mega Charizard X ex Ultra Premium Collection is now market value at Amazon",
+        "link": "https://mashable.com/article/dec-15-mega-charizard-x-ex-ultra-premium-collection-deal",
+        "published": "Mon, 15 Dec 2025 10:48:33 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 15, Pok\u00e9mon TCG Mega Charizard X ex Ultra Premium Collection is now market value at Amazon when compared to TCGplayer"
+    },
+    {
+        "id": "https://mashable.com/article/interstellar-comet-3i-atlas-changes-red-to-green-images",
+        "title": "See the 3I/ATLAS comet strangely shift from red to green in new images",
+        "link": "https://mashable.com/article/interstellar-comet-3i-atlas-changes-red-to-green-images",
+        "published": "Mon, 15 Dec 2025 10:43:14 +0000",
+        "source": "Mashable",
+        "summary": "By combining color images from the ground with X-rays taken from space, scientists gain new insight into interstellar comet 3I/ATLAS."
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-phantasmal-flames-elite-trainer-box-deal",
+        "title": "The Pok\u00e9mon TCG Phantasmal Flames Elite Trainer Box is now market value at Amazon",
+        "link": "https://mashable.com/article/dec-15-phantasmal-flames-elite-trainer-box-deal",
+        "published": "Mon, 15 Dec 2025 10:41:04 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 15, Pok\u00e9mon TCG Phantasmal Flames Elite Trainer Box is now market value at Amazon when compared to TCGplayer."
+    },
+    {
+        "id": "https://readwrite.com/rajab-butt-nadeem-naniwala-mubarak-granted-interim-bail-gambling-app-pakistan/",
+        "title": "Influencers Rajab Butt and Nadeem \u2018Naniwala\u2019 Mubarak granted interim bail in gambling app case",
+        "link": "https://readwrite.com/rajab-butt-nadeem-naniwala-mubarak-granted-interim-bail-gambling-app-pakistan/",
+        "published": "Mon, 15 Dec 2025 10:58:45 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Influencers Rajab Butt and Nadeem \u2018Naniwala\u2019 Mubarak granted interim bail in gambling app case. TikTokers Rajab Butt and Nadeem \u2018Naniwala\u2019 Mubarak arrive at Islamabad Airport carrying shopping bags and wearing caps and face masks.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Influencers-Rajab-Butt-and-Nadeem-\u2018Naniwala-Mubarak-granted-interim-bail-in-gambling-app-case-300x200.png\" style=\"width: 100%; height:"
+    },
+    {
+        "id": "https://readwrite.com/vgw-luckyland-casino-launch/",
+        "title": "VGW expands online \u2018Social Plus\u2019 brands with LuckyLand Casino launch",
+        "link": "https://readwrite.com/vgw-luckyland-casino-launch/",
+        "published": "Mon, 15 Dec 2025 10:29:37 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"VGW expands online &#039;Social Plus&#039; brands with LuckyLand Casino launch. Illustration of LuckyLand Casino logo on a pink background alongside a smiling animated female casino host character in a blue suit, representing VGW\u2019s LuckyLand Casino social gaming brand.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/VGW-expands-online-Social-Plus-brands-with-LuckyLand-Casino-launch-300x200.png\" style=\"width: 1"
+    },
+    {
+        "id": "https://readwrite.com/arizona-department-gaming-underdog-revoke-fantasy-sports-license/",
+        "title": "Arizona regulator notifies Underdog it intends to revoke its fantasy sports contest license",
+        "link": "https://readwrite.com/arizona-department-gaming-underdog-revoke-fantasy-sports-license/",
+        "published": "Mon, 15 Dec 2025 10:21:52 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Underdog logo against a black background. Underdog confirmed to be shutting down sports betting in North Carolina, while Arizona now has threatened to revoke its fantasy sports license.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-20-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Arizona Department of Gaming (ADG) has issued a stern statement to gambli"
+    },
+    {
+        "id": "https://www.zdnet.com/article/it-leadership-career-advice/",
+        "title": "5 ways to climb the IT career ladder in 2026, according to those who made it",
+        "link": "https://www.zdnet.com/article/it-leadership-career-advice/",
+        "published": "Mon, 15 Dec 2025 11:00:39 GMT",
+        "source": "Latest news",
+        "summary": "Here are five things that will help you to stand out from your digital leadership rivals next year as you aim to snare a senior management position."
+    },
+    {
+        "id": "https://andyatkinson.com/avoid-uuid-version-4-primary-keys",
+        "title": "Avoid UUIDv4 Primary Keys",
+        "link": "https://andyatkinson.com/avoid-uuid-version-4-primary-keys",
+        "published": "Mon, 15 Dec 2025 10:08:02 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46272487\">Comments</a>"
     }
 ]
