📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13454,5 +13454,117 @@
         "published": "Mon, 15 Dec 2025 10:08:02 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46272487\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/844538/kindle-app-ask-this-book-ai-ios",
+        "title": "Kindle app now answers questions about the book you\u2019re reading",
+        "link": "https://www.theverge.com/news/844538/kindle-app-ask-this-book-ai-ios",
+        "published": "2025-12-15T07:12:41-05:00",
+        "source": "The Verge",
+        "summary": "Amazon has launched a new AI feature in the Kindle app that gives spoiler-free answers to questions about the book you're reading, and confirmed that authors can't opt out from the feature. The company calls Ask this Book an \"expert reading assistant\" in its announcement, and says that it's capable of answering questions about \"plot [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/cs/features/831818/ai-mercor-handshake-scale-surge-staffing-companies",
+        "title": "Feeding the machine",
+        "link": "https://www.theverge.com/cs/features/831818/ai-mercor-handshake-scale-surge-staffing-companies",
+        "published": "2025-12-15T07:00:00-05:00",
+        "source": "The Verge",
+        "summary": "When he was 19 years old, Brendan Foody started Mercor with two of his high school friends as a way for his other friends, who also had startups, to hire software engineers overseas. It launched in 2023 as essentially a staffing agency, albeit a highly automated one. Language models reviewed resumes and did the interviewing. [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/hyprlabs-wants-to-build-a-self-driving-robot-super-fast/",
+        "title": "This Startup Wants to Build Self-Driving Car Software\u2014Super Fast",
+        "link": "https://www.wired.com/story/hyprlabs-wants-to-build-a-self-driving-robot-super-fast/",
+        "published": "Mon, 15 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The autonomous vehicle industry is heating up thanks to advances in AI. But can those same innovations help startups like HyprLabs build safe tech?"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-desktop-computers/",
+        "title": "7 Best Desktop Computers (2025): Gaming, Macs, Compact, and More",
+        "link": "https://www.wired.com/gallery/best-desktop-computers/",
+        "published": "Mon, 15 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Despite advancements in laptops, desktop computers still have a place. These are the WIRED-tested options you should consider."
+    },
+    {
+        "id": "https://www.engadget.com/apps/even-uber-has-an-end-of-year-wrap-up-now-120035274.html?src=rss",
+        "title": "Even Uber has an end-of-year wrap-up now",
+        "link": "https://www.engadget.com/apps/even-uber-has-an-end-of-year-wrap-up-now-120035274.html?src=rss",
+        "published": "Mon, 15 Dec 2025 12:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>End-of-year wrap-ups were popularized by <a href=\"https://www.engadget.com/entertainment/music/spotify-wrapped-2025-is-here-and-now-its-a-competition-130052418.html\"><ins>Spotify</ins></a>, and these days you can look back on the last 12 months of listening with most of the <a href=\"https://www.engadget.com/entertainment/music/apple-music-replay-2025-is-here-to-highlight-your-unimpeachable-music-taste-151224318.html\"><ins>music</ins></a> streaming <a href=\"https://www.engadget.com/apps/amazon"
+    },
+    {
+        "id": "https://www.engadget.com/engadgets-best-of-2025-114500543.html?src=rss",
+        "title": "Engadget's best of 2025",
+        "link": "https://www.engadget.com/engadgets-best-of-2025-114500543.html?src=rss",
+        "published": "Mon, 15 Dec 2025 12:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Engadget has been reviewing the latest devices for over two decades, adding well <a class=\"link\" href=\"https://www.engadget.com/reviews/\" target=\"_blank\">over 100 in-depth product tests</a> to our tally every year. For 2025, we have compiled a list of the best gear we reviewed this year based on the highest review scores in each category. From Pixel to iPad, and Switch 2 to Sony WH-1000XM6, our reviews team has spent thousands of hours testing new products this year to discover the best of th"
+    },
+    {
+        "id": "https://gizmodo.com/james-cameron-wont-let-netflix-buying-warner-bros-kill-theaters-2000699580",
+        "title": "James Cameron Won\u2019t Let Netflix Buying Warner Bros. Kill Theaters",
+        "link": "https://gizmodo.com/james-cameron-wont-let-netflix-buying-warner-bros-kill-theaters-2000699580",
+        "published": "Mon, 15 Dec 2025 12:00:01 +0000",
+        "source": "Gizmodo",
+        "summary": "Eywa as his witness, James Cameron has pledged to make movies for theaters so that side of the business stays alive."
+    },
+    {
+        "id": "https://mashable.com/article/pluribus-apple-tv-most-watched-show",
+        "title": "Apple TV announces a huge Pluribus milestone in the most Pluribus way",
+        "link": "https://mashable.com/article/pluribus-apple-tv-most-watched-show",
+        "published": "Mon, 15 Dec 2025 12:00:45 +0000",
+        "source": "Mashable",
+        "summary": "Apple TV announced that \"Pluribus\" is its most watched series, reportedly surpassing popular shows like \"Severance\" and \"Ted Lasso.\""
+    },
+    {
+        "id": "https://mashable.com/article/tesla-driverless-robotaxi-austin",
+        "title": "Driverless Tesla Robotaxi spotted in Austin",
+        "link": "https://mashable.com/article/tesla-driverless-robotaxi-austin",
+        "published": "Mon, 15 Dec 2025 11:57:46 +0000",
+        "source": "Mashable",
+        "summary": "A fully driverless Tesla Robotaxi was spotted riding around in Austin, Texas."
+    },
+    {
+        "id": "https://www.zdnet.com/article/text-image-tests-openai-gpt-5-2-mixed-results/",
+        "title": "I put GPT-5.2 through an 13-round test, and the AI model raised some serious questions",
+        "link": "https://www.zdnet.com/article/text-image-tests-openai-gpt-5-2-mixed-results/",
+        "published": "Mon, 15 Dec 2025 12:20:00 GMT",
+        "source": "Latest news",
+        "summary": "After 10 text and 4 image tests, OpenAI's latest model barely beats GPT-5.1. What are Plus subscribers really getting?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/sandisk-extremefit-usb-review/",
+        "title": "The world's smallest 1TB SSD drive is the travel device I didn't know I needed",
+        "link": "https://www.zdnet.com/article/sandisk-extremefit-usb-review/",
+        "published": "Mon, 15 Dec 2025 12:17:00 GMT",
+        "source": "Latest news",
+        "summary": "The SanDisk ExtremeFit USB-C weighs under 3 grams yet delivers ample storage and fast speeds."
+    },
+    {
+        "id": "https://www.zdnet.com/article/4-step-android-phone-refresh-routine/",
+        "title": "This 4-step routine instantly improves my Android phone performance - and it works everytime",
+        "link": "https://www.zdnet.com/article/4-step-android-phone-refresh-routine/",
+        "published": "Mon, 15 Dec 2025 12:15:00 GMT",
+        "source": "Latest news",
+        "summary": "A few taps and swipes can make your old phone feel new again."
+    },
+    {
+        "id": "https://www.zdnet.com/article/acer-swift-16-ai-review/",
+        "title": "My favorite Windows laptop for work travel in 2025 costs less than you think",
+        "link": "https://www.zdnet.com/article/acer-swift-16-ai-review/",
+        "published": "Mon, 15 Dec 2025 12:09:00 GMT",
+        "source": "Latest news",
+        "summary": "Acer's Swift 16 AI delivers premium features without the premium cost."
+    },
+    {
+        "id": "https://www.zdnet.com/article/what-every-usb-port-color-means/",
+        "title": "Why is my USB port orange? I learned what every color really means, and it's wild",
+        "link": "https://www.zdnet.com/article/what-every-usb-port-color-means/",
+        "published": "Mon, 15 Dec 2025 12:07:00 GMT",
+        "source": "Latest news",
+        "summary": "Look closely - the colors on your USB ports are more than just aesthetics."
     }
 ]
