📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13678,5 +13678,53 @@
         "published": "Mon, 15 Dec 2025 13:10:00 +0000",
         "source": "MIT Technology Review",
         "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. Introducing: the AI Hype Correction package AI is going to reproduce human intelligence. AI will eliminate disease. AI is the single biggest, most important invention in human history. You&#8217;ve likely heard it all\u2014but&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/report/844454/musicians-tired-of-ai-clones",
+        "title": "Musicians are getting really tired of this AI clone \u2018bullshit\u2019",
+        "link": "https://www.theverge.com/report/844454/musicians-tired-of-ai-clones",
+        "published": "2025-12-15T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "\"Not ideal.\" \"Completely unacceptable.\" \"Shameless.\" \"Predatory.\" \"Some bullshit.\" \"Total bullshit.\" This is how musicians, producers, and others in the industry are describing the relentless spread of AI clones. Of course, AI fakes aren't new, but as the scammers have gotten more brazen, artists are responding with increasing furor. We got a taste back in 2023 [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/nvidia-becomes-major-model-maker-nemotron-3/",
+        "title": "Nvidia Becomes a Major Model Maker With Nemotron 3",
+        "link": "https://www.wired.com/story/nvidia-becomes-major-model-maker-nemotron-3/",
+        "published": "Mon, 15 Dec 2025 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The world\u2019s top chipmaker wants open source AI to succeed\u2014perhaps because closed models increasingly run on its rivals\u2019 silicon."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/verizon-refused-to-unlock-mans-iphone-so-he-sued-the-carrier-and-won/",
+        "title": "Verizon refused to unlock man\u2019s iPhone, so he sued the carrier and won",
+        "link": "https://arstechnica.com/tech-policy/2025/12/verizon-refused-to-unlock-mans-iphone-so-he-sued-the-carrier-and-won/",
+        "published": "Mon, 15 Dec 2025 12:30:44 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Verizon changed policy after he bought the phone, wouldn't unlock it despite FCC rule."
+    },
+    {
+        "id": "https://gizmodo.com/james-gunn-man-of-tomorrow-brainiac-dave-bautista-2000699534",
+        "title": "James Gunn Denies Even More Brainiac Rumors for \u2018Man of Tomorrow\u2019",
+        "link": "https://gizmodo.com/james-gunn-man-of-tomorrow-brainiac-dave-bautista-2000699534",
+        "published": "Mon, 15 Dec 2025 14:14:45 +0000",
+        "source": "Gizmodo",
+        "summary": "Plus, get new looks at 'Lanterns' and the return of 'House of the Dragon'."
+    },
+    {
+        "id": "https://www.zdnet.com/article/as-meta-fades-in-open-source-ai-nvidia-senses-its-chance-to-lead/",
+        "title": "As Meta fades in open-source AI, Nvidia senses its chance to lead",
+        "link": "https://www.zdnet.com/article/as-meta-fades-in-open-source-ai-nvidia-senses-its-chance-to-lead/",
+        "published": "Mon, 15 Dec 2025 14:00:42 GMT",
+        "source": "Latest news",
+        "summary": "Nvidia emphasizes greater transparency in its Nemotron 3 models, especially with respect to training data that enterprises care about."
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/awss-legacy-will-be-in-ai-success/",
+        "title": "AWS\u2019s legacy will be in AI success",
+        "link": "https://www.artificialintelligence-news.com/news/awss-legacy-will-be-in-ai-success/",
+        "published": "Mon, 15 Dec 2025 13:44:11 +0000",
+        "source": "AI News",
+        "summary": "<p>As the company that kick-started the cloud computing revolution, Amazon is one of the world&#8217;s biggest companies whose practices in all things technological can be regarded as a blueprint for implementing new technology. This article looks at some of the ways that the company is deploying AI in its operations. Amazon\u2019s latest AI strategy has [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/awss-legacy-will-be-in-ai-success/\">AWS&#8217;s legacy will be i"
     }
 ]
